Avancement sur les cards 🚧

--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
 		<div id="projets">
 			<p id="projetsTitle" class="title text l">Projets</p>
 			<div class="firstRow">
-				<div class="card1">
-					<p>Mini-RSA</p>
+				<div class="card1 card">
+					<p class="cardTitle">Mini-RSA</p>
 					<img src="./files/img/wip.png" class="wip">
-					<p>Pouvoir crypter et décrypter des message à base de génération de clé et en implémenter son interface</p>
+					<p class="cardDesc">Pouvoir crypter et décrypter des message à base de génération de clé et en implémenter son interface</p>
 					<div class="tag">
 						<p>html</p>
 						<p>pyscript</p>
@@ -204,21 +204,25 @@
 						</svg></a>
 					</div>
 				</div>
-				<div class="card2">
-					<p>Affiche JPO</p>
+				<div class="card2  card">
+					<p class="cardTitle">Affiche JPO</p>
 					<img src="./files/img/wip.png" class="wip">
-					<p>Réaliser les différentes affiches et badges pour la journée portes ouvertes 2022 de l'IUT informatique tout en respectant un cahier des charges précis</p>
-					<p>photoshop</p>
+					<p class="cardDesc">Réaliser les différentes affiches et badges pour la journée portes ouvertes 2022 de l'IUT informatique tout en respectant un cahier des charges précis</p>
+					<div class="tag">
+						<p>photoshop</p>
+					</div>
 					<svg width="45px" viewBox="0 0 512 512">
 						<path class="svg" d="m251.6,185.7c-36.9,0-67,31.5-67,70.3 0,38.7 30,70.3 67,70.3 36.9,0 67-31.5 67-70.3 0-38.7-30.1-70.3-67-70.3z"/>
       					<path class="svg" d="m251.6,367.1c-59.4,0-107.8-49.8-107.8-111.1 0-61.3 48.4-111.1 107.8-111.1s107.8,49.8 107.8,111.1c0,61.3-48.4,111.1-107.8,111.1zm246.3-121.9c-63.8-102.4-149.8-158.8-241.9-158.8-92.1,0-178.1,56.4-241.9,158.8-4.1,6.6-4.1,15 0,21.6 63.8,102.4 149.8,158.8 241.9,158.8 92.1,0 178-56.4 241.9-158.8 4.1-6.6 4.1-15 0-21.6z"/>  
 					</svg>
 				</div>
-				<div class="card3">
-					<p>Pong</p>
+				<div class="card3  card">
+					<p class="cardTitle">Pong</p>
 					<img src="./files/img/wip.png" class="wip">
-					<p>Réaliser un jeu reprenant le principe de "pong" en pouvant controler 2 raquettes, un mode avec 4 balles et le rajout d'obstacles</p>
-					<p>processing</p>
+					<p class="cardDesc">Réaliser un jeu reprenant le principe de "pong" en pouvant controler 2 raquettes, un mode avec 4 balles et le rajout d'obstacles</p>
+					<div class="tag">
+						<p>processing</p>
+					</div>
 					<div class="link">
 						<a href="https://mini-rsa.vercel.app" target="_blank"><svg width="36px" viewBox="0 0 283.842 283.842">
 							<path class="svg" d="M265.117,22.764l-9.877-8.737c-23.003-20.398-58.227-18.283-78.618,4.726l-28.267,31.89
@@ -241,13 +245,13 @@
 				</div>
 			</div>
 			<div class="secondRow">
-				<div class="card4">
+				<div class="card4  card">
 
 				</div>
-				<div class="card5">
+				<div class="card5  card">
 
 				</div>
-				<div class="card6">
+				<div class="card6  card">
 
 				</div>
 		</div>
