--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@
 					<div class="tag">
 						<p>photoshop</p>
 					</div>
-					<svg width="45px" viewBox="0 0 512 512">
+					<a href="./files/pdf/presJPO.pdf" target="_blank"><svg width="45px" viewBox="0 0 512 512">
 						<path class="svg" d="m251.6,185.7c-36.9,0-67,31.5-67,70.3 0,38.7 30,70.3 67,70.3 36.9,0 67-31.5 67-70.3 0-38.7-30.1-70.3-67-70.3z"/>
       					<path class="svg" d="m251.6,367.1c-59.4,0-107.8-49.8-107.8-111.1 0-61.3 48.4-111.1 107.8-111.1s107.8,49.8 107.8,111.1c0,61.3-48.4,111.1-107.8,111.1zm246.3-121.9c-63.8-102.4-149.8-158.8-241.9-158.8-92.1,0-178.1,56.4-241.9,158.8-4.1,6.6-4.1,15 0,21.6 63.8,102.4 149.8,158.8 241.9,158.8 92.1,0 178-56.4 241.9-158.8 4.1-6.6 4.1-15 0-21.6z"/>  
-					</svg>
+					</svg></a>
 				</div>
 				<div class="card3  card">
 					<p class="cardTitle">Pong</p>
@@ -224,7 +224,7 @@
 						<p>processing</p>
 					</div>
 					<div class="link">
-						<a href="https://mini-rsa.vercel.app" target="_blank"><svg width="36px" viewBox="0 0 283.842 283.842">
+						<a href="https;//cenacrew.com/WIP" target="_blank"><svg width="36px" viewBox="0 0 283.842 283.842">
 							<path class="svg" d="M265.117,22.764l-9.877-8.737c-23.003-20.398-58.227-18.283-78.618,4.726l-28.267,31.89
 								c-6.38,7.199-5.717,18.251,1.479,24.637l2.653,2.354c7.221,6.402,18.239,5.741,24.646-1.481l28.265-31.889
 								c6.305-7.107,17.227-7.761,24.338-1.466l9.865,8.752c7.113,6.303,7.783,17.223,1.469,24.334l-61.808,69.726
@@ -238,7 +238,7 @@
 								c-20.371,22.978-18.252,58.246,4.726,78.622l9.877,8.749c10.583,9.383,23.77,13.992,36.913,13.992
 								c15.394,0,30.724-6.327,41.718-18.724l28.258-31.886C141.88,226.003,141.224,214.987,133.998,208.581z"/>
 						</svg></a>
-						<a href="https://github.com/cenacrew/miniRSA" target="_blank"><svg width="40px" viewBox="0 0 27 27">
+						<a href="https://github.com/cenacrew/pong" target="_blank"><svg width="40px" viewBox="0 0 27 27">
 							<path id="github" class="svg" d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
 						</svg></a>
 					</div>
