--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 						<p>processing</p>
 					</div>
 					<div class="link">
-						<a href="https;//cenacrew.com/WIP" target="_blank"><svg width="36px" viewBox="0 0 283.842 283.842">
+						<a href="/WIP" target="_blank"><svg width="36px" viewBox="0 0 283.842 283.842">
 							<path class="svg" d="M265.117,22.764l-9.877-8.737c-23.003-20.398-58.227-18.283-78.618,4.726l-28.267,31.89
 								c-6.38,7.199-5.717,18.251,1.479,24.637l2.653,2.354c7.221,6.402,18.239,5.741,24.646-1.481l28.265-31.889
 								c6.305-7.107,17.227-7.761,24.338-1.466l9.865,8.752c7.113,6.303,7.783,17.223,1.469,24.334l-61.808,69.726
@@ -246,12 +246,51 @@
 			</div>
 			<div class="secondRow">
 				<div class="card4  card">
-
+					<p class="cardTitle">BloomFilter</p>
+					<img src="./files/img/wip.png" class="wip">
+					<p class="cardDesc">Réaliser un Filtre de Bloom fonctionnant de trois facon différentes puis un benchmark de ce filtre et en réaliser un papier d'analyse</p>
+					<div class="tag">
+						<p>java</p>
+					</div>
+					<div class="link">
+					<a href="./files/pdf/analyseBloomFilter.pdf" target="_blank"><svg width="45px" viewBox="0 0 512 512">
+						<path class="svg" d="m251.6,185.7c-36.9,0-67,31.5-67,70.3 0,38.7 30,70.3 67,70.3 36.9,0 67-31.5 67-70.3 0-38.7-30.1-70.3-67-70.3z"/>
+      					<path class="svg" d="m251.6,367.1c-59.4,0-107.8-49.8-107.8-111.1 0-61.3 48.4-111.1 107.8-111.1s107.8,49.8 107.8,111.1c0,61.3-48.4,111.1-107.8,111.1zm246.3-121.9c-63.8-102.4-149.8-158.8-241.9-158.8-92.1,0-178.1,56.4-241.9,158.8-4.1,6.6-4.1,15 0,21.6 63.8,102.4 149.8,158.8 241.9,158.8 92.1,0 178-56.4 241.9-158.8 4.1-6.6 4.1-15 0-21.6z"/>  
+					</svg></a>
+					<a href="https://github.com/cenacrew/BloomFilter" target="_blank"><svg width="40px" viewBox="0 0 27 27">
+							<path id="github" class="svg" d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+					</svg></a>
+					</div>
 				</div>
 				<div class="card5  card">
+				<p class="cardTitle">Démineur</p>
+					<img src="./files/img/wip.png" class="wip">
+					<p class="cardDesc">Corriger, optimiser et améliorer un démineur en java, via l'utilisation de branche et de merge</p>
+					<div class="tag">
+						<p>java</p>
+					</div>
+					<div class="link">
+					<a href="https://github.com/cenacrew/DemineurProject" target="_blank"><svg width="40px" viewBox="0 0 27 27">
+							<path id="github" class="svg" d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+					</svg></a>
+					</div>
 
 				</div>
 				<div class="card6  card">
+				<p class="cardTitle">WatchList</p>
+					<img src="./files/img/wip.png" class="wip">
+					<p class="cardDesc">En partant de rien, réaliser un site permetant de voir une liste de series, les liker, suivre notre progression et plein d'autre fontionalité donné petit a petit</p>
+					<div class="tag">
+						<p>PHP</p>
+						<p>HTML</p>
+						<p>CSS</p>
+						<p>Symfony</p>
+					</div>
+					<div class="link">
+					<a href="https://github.com/cenacrew/DemineurProject" target="_blank"><svg width="40px" viewBox="0 0 27 27">
+							<path id="github" class="svg" d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+					</svg></a>
+					</div>
 
 				</div>
 		</div>
