--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
 			<div class="QSJContent">		
 				<img id="creation" alt="illustration creation" src="./files/img/creation.png">
 				<p id="firstP" class="text m para">Je suis passionné et créatif, intéressé par l'art numérique et la création de logo, DA, UI design, et maîtrisant des logiciels tels que Photoshop,
-					Lightroom et Figma. Mes passions et logiciels m'aident dans mes créations informatiques, ma principale passion.</p>
+					Lightroom et Figma. Ces intérêts et logiciels m'aident dans mes créations informatiques, ma principale passion.</p>
 				<br>
-				<p id="secondP" class="text m para">Je suis actuellement en deuxième année d'une formation en informatique de 3 ans à 
-					l'IUT de Bordeaux. Je recherche un stage pour acquérir une expérience professionnelle. J'ai obtenu mon bac STI2D avec
+				<p id="secondP" class="text m para">Je suis actuellement en troisième années d'une formation en informatique de 3 ans à 
+					l'IUT de Bordeaux. Je suis actuellement en alterance chez SQLI pour acquérir une expérience professionnelle. J'ai obtenu mon bac STI2D avec
 					mention très bien au Lycée Albert Claveille à Périgueux.</p>
 				<img id="formation" alt="illustration formation" src="./files/img/formation.png">
 			</div>				
@@ -297,7 +297,7 @@
 			<div class="contactInfo">
 				<div class="mail">
 					<div class="mail1">
-						<a href="mailto:contact@cenacrew.com"><svg viewBox="0 0 24 24" width="65px">
+						<a href="mailto:valetnina.sp@gmail.com"><svg viewBox="0 0 24 24" width="65px">
 							<path id="mail" class="svg" d="M20,3H4C1.8,3,0,4.8,0,7v10c0,2.2,1.8,4,4,4h16c2.2,0,4-1.8,4-4V7C24,4.8,22.2,3,20,3z M21.6,8.8l-7.9,5.3   c-0.5,0.3-1.1,0.5-1.7,0.5s-1.2-0.2-1.7-0.5L2.4,8.8C2,8.5,1.9,7.9,2.2,7.4C2.5,7,3.1,6.9,3.6,7.2l7.9,5.3c0.3,0.2,0.8,0.2,1.1,0   l7.9-5.3c0.5-0.3,1.1-0.2,1.4,0.3C22.1,7.9,22,8.5,21.6,8.8z"/>
 						</svg></a>
 					</div>
@@ -325,7 +325,7 @@
 	<!---Footer-->
 	<footer class="main-footer">
 		<div class="footer-wrapper">
-			<p class="text m copyright"> © 2022 cenacrew.com</p>
+			<p class="text m copyright"> © 2024 cenacrew.com</p>
 		</div>
 	</footer>
 
